--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title:
 -->
 <html>
 	<head>
-		<title>Joway.W</title>
+		<title>Joey.W</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -34,8 +34,8 @@ title:
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Joway.W</h1>
-						<p> 沧浪之水清兮，可以濯吾缨。 沧浪之水浊兮，可以濯吾足。 </p>
+						<h1>Joey.W</h1>
+						<p> 别人笑我太疯癫, 我笑他人看不穿。不见五陵豪杰墓, 无花无酒锄作田。 </p>
 						<nav>
 							<ul>
 								<li><a href="{{ site.url }}/blog.html" class="fa fa-wordpress"><span>博客</span></a></li>
