--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title:
 						<nav>
 							<ul>
 								<li><a href="{{ site.url }}/blog.html" class="fa fa-wordpress"><span>博客</span></a></li>
-								<li><a href="https://github.com/joway" class="fa fa-github-square"><span>github</span></a></li>
+								<li><a href="https://github.com/joeywen" class="fa fa-github-square"><span>github</span></a></li>
 								<li><a href="{{ site.url }}/tags.html" class="fa fa-tags"><span>分类</span></a></li>
 								<li><a href="{{ site.url }}/photos/index.html" class="fa fa-picture-o"><span>相册</span></a></li>
 								<li><a href="{{ site.url }}/message.html" class="fa fa-comments"><span>留言板</span></a></li>
