--- a/_posts/2015-02-14-To Sheryl.html
+++ b/_posts/2015-02-14-To Sheryl.html
@@ -6,7 +6,7 @@
     <title>To Sheryl Ling</title>
     <meta name="author" content="Joey Wen"> 
     <link rel="canonical" href="./love_sheryl_files/love_sheryl.html">
-    <script async="" defer="" src="./love_sheryl_files/ga.js"></script><script>
+    <script async="" defer="" src="http://joeywen.github.io/lovesheryl/assets/js/"></script><script>
       		setTimeout(function(){
 			var ga = document.createElement('script');
 			ga.async = true;
