--- a/photos/index.html
+++ b/photos/index.html
@@ -43,7 +43,7 @@
 
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" href="http://joeywen.github.io/lovesheryl/favicon.ico">
+<link rel="shortcut icon" href="http://joeywen.github.io/lovesheryl/favicon.png">
 <!-- 32x32 -->
 <link rel="shortcut icon" href="http://joeywen.github.io/lovesheryl/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
