--- a/photos/index.html
+++ b/photos/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>Photos &#8211; Joway.w</title>
+<title>Photos &#8211; Joey.W</title>
 <meta name="description" content="Someone to love. Something to hope. Something to do.">
 
 
@@ -24,8 +24,8 @@
 
 
 <link rel="canonical" href="http://joeywen.github.io/lovesheryl/photos/index.html">
-<link href="http://joway-w.aliapp.com/feed.xml" type="application/atom+xml" rel="alternate" title="Joway.W Feed">
-<link rel="author" href="https://plus.google.com/110053076986281501134/posts?rel=author">
+<!-- <link href="http://joway-w.aliapp.com/feed.xml" type="application/atom+xml" rel="alternate" title="Joway.W Feed"> -->
+<!-- <link rel="author" href="https://plus.google.com/110053076986281501134/posts?rel=author"> -->
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -203,12 +203,12 @@ list-style:none;
 
     
     <div style="display:none" itemscope itemtype="http://schema.org/Product">
-   <span itemprop="name">Joway.W</span>
+   <span itemprop="name">Joey.W</span>
    <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
      评分<span itemprop="ratingValue">4.8</span>/5 based on <span itemprop="reviewCount">20</span> 票
 </div>
 </div>
-    <span>&copy; 2014 Joway.W. Powered by <a href="http://jekyllrb.com">Jekyll</a></span>
+    <span>&copy; 2014 Joey.W. Powered by <a href="http://jekyllrb.com">Jekyll</a></span>
 <div class="social-icons">
 	
 	
@@ -217,9 +217,7 @@ list-style:none;
 	
 	
 	
-	<a href="http://github.com/joway" title="Joway.W on Github" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-	
-	<a href="http://weibo.com/joway" title="Joway.W on Weibo" target="_blank"><i class="fa fa-weibo fa-2x"></i></a>
+	<a href="http://github.com/joeywen" title="Joey.W on Github" target="_blank"><i class="fa fa-github fa-2x"></i></a>
 <!-- cnzz -->
 <div style="display:none">
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1000306663'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s5.cnzz.com/z_stat.php%3Fid%3D1000306663%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
